-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2011-11-18	pwessel
	* *.c:			Make sure that incrementally allocated memory for structures
				that contain pointers is initialized to NULL before use.

2011-11-17	pwessel
	* grdlandmask.c:	Now recognizes a global grid when nx*dx == 360 also.
	* nearneighbor.c:	--"--
	* grdcut.c:		--"--
	* grdfilter.c:		--"--
	* grdinfo.c:		--"--
	* grdimage.c:		--"--
	* misc/dimfilter.c:	--"--

2011-11-15	pwessel
	* gmt_unique.h:		Updated with the new common options.
	* gmt_init.c:		No longer accept lower case -x -y as in GMT 4 (inadvertently).

2011-11-13	pwessel
	* gmt_grdio.c:		Need to reset zmin/zmax when region was temporarily expanded to
				include data boundary rows/cols.
	* grdinfo.c:		Modifier -Ts<dz> returns a symmetrical range about zero.
	* grdpaste.c:		Had trouble shuffling longitudes correctly for geographic grids.
	* *.c:			Improved freeing of allocated memory as reported under --enable-devdebug
			
2011-11-12	pwessel
	* gmtmercmap.c:		New example of API use: Create a shaded-relief Mercator map using
				Etopo 1|2|5m global relief, with optional color bar.  Option -D
				makes no map but writes equivalent Bourne shell or cshell script.

	* gmt_support.c:	Resampling of CPTs did not initialize the i_dz variables, resulting
				in discontinuous colors for continuous color maps.

2011-11-11	remko
	* pslib.c:		Fixed error in PSL_message (wrong verbosity handling)

2011-11-11	pwessel
	* gmtapi_util.c:	Introduce GMT_Retrieve_Data to return a pointer to a container
				that was allocated when a memory location was registered as the
				output.  Reduced GMT_Begin_IO to only apply to rec-by-rec i/o,
				hence we could remove the mode variable.  GMT_Register_IO now
				expects the pointer to the resource, not the pointer address.

2011-11-09	pwessel